# cli-browser-bridge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  TERMS_OF_USE.md  install.sh
.github/workflows/: release.yml
extension/: background.js  cdp.js  content.js  manifest.json  popup.css  popup.html  popup.js  tabs.js  tools-advanced.js  tools.js
src/: config.rs  error.rs  host.rs  ipc.rs  lifecycle.rs  main.rs  native_messaging.rs  serve.rs
src/bridge/: protocol.rs
src/mcp/: mod.rs  tools.rs  tools_advanced.rs  transport.rs
