[package]
name = "cli-browser-bridge"
version = "1.0.0"
edition = "2021"
description = "Rust-powered browser automation bridge for Claude Code by orellius.ai"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
